# AI-PRED

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  storage.py
api/: main.py
dashboard/: app.py
docs/: architecture-v2-design.md  decision-log.md  phase2-design.md  phase2a-plan.md
ingestion/: ai_economics_ingestion.py  ais_ingestion.py  bls_jolts_ingestion.py  build_cusip_map.py  census_trade_ingestion.py  cyber_threat_ingestion.py  deal_ingestion.py  earnings_ingestion.py  edgar_fundamentals_ingestion.py  eia_ingestion.py  energy_geo_ingestion.py  ferc_queue_ingestion.py  financial_ingestion.py  flight_ingestion.py  fundamental_ingestion.py  fx_ingestion.py  insider_trading_ingestion.py  news_ingestion.py  ohlcv_ingestion.py  options_ingestion.py  robotics_signals_ingestion.py  sam_gov_ingestion.py  sec_13f_ingestion.py  short_interest_ingestion.py  ticker_registry.py  usajobs_ingestion.py  uspto_ingestion.py
models/: backtest.py  inference.py  train.py
processing/: ai_economics_features.py  census_trade_features.py  cyber_threat_features.py  earnings_features.py  energy_geo_features.py  feature_engineering.py  fundamental_features.py  fx_features.py  gov_behavioral_features.py  graph_features.py  insider_features.py  label_builder.py  labor_features.py  nlp_pipeline.py  options_features.py  ownership_features.py  patent_features.py  physical_ai_features.py  portfolio_metrics.py  price_features.py  sentiment_features.py  short_interest_features.py  supply_chain_features.py
tests/: conftest.py  test_13f_ingestion.py  test_13f_ranking.py  test_api.py  (+59 more)
(+144 files in other folders)
