[project]
name = "ai-infra-predictor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "polars>=1.0",
  "pandas>=2.0",
  "duckdb>=1.1",
  "pyarrow>=17.0",
  "requests>=2.32",
  "httpx>=0.27",
  "aiohttp>=3.10",
  "websockets>=13.0",
  "feedparser>=6.0",
  "transformers>=4.45",
  "torch>=2.4",
  "scikit-learn>=1.5",
  "fastapi>=0.115",
  "uvicorn>=0.32",
  "streamlit>=1.40",
  "plotly>=5.24",
  "apscheduler>=3.10",
  "python-dotenv>=1.0",
  "tiingo>=0.15",
  "finnhub-python>=2.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingestion", "processing", "models", "api", "dashboard", "orchestration"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: marks tests that call real external APIs (skip with -m 'not integration')",
]
